--- a/GetMercadoLivreData/GetValuesFromSitesLocatedInList.ipynb
+++ b/GetMercadoLivreData/GetValuesFromSitesLocatedInList.ipynb
@@ -361,14 +361,20 @@
     "\n",
     "\n",
     "\n",
-    "def GetHtmlValue(url, CssSelector):\n",
+    "def GetHtmlValue(url, CssSelector, findWebsite = False):\n",
     "    response = urlopen(url)\n",
     "\n",
     "    soup = BeautifulSoup(response)\n",
     "\n",
     "    resultSelect = soup.select(CssSelector)\n",
     "    \n",
-    "    resultSelectText = resultSelect[0].text\n",
+    "    if findWebsite:\n",
+    "        resultSelectText = resultSelect[0].find('a')['href']\n",
+    "        \n",
+    "    else:\n",
+    "        resultSelectText = resultSelect[0].text\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    return resultSelectText \n",
     "    \n",
