check if tables and paragraphs scripts where created and worked on

--- a/DocManipulationFIles/Untitled15.ipynb
+++ b/DocManipulationFIles/Untitled15.ipynb
@@ -784,6 +784,13 @@
     "####### which is not what is desired\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "####### TODO if 'Ÿ' is the first letter in a paragraph the program MUST get the location and put the location\n",
+    "####### as 'Ÿ' , however if it is anywhere else in the document it MUST consider it as ' Ÿ'\n",
+    "####### this is true in ANY paragraph, be it isolated from a table or within a table.\n",
+    "\n",
+    "\n",
     "from docx import Document\n",
     "\n",
     "# import UserImputToTableImput\n",
