--- a/DocManipulationFIles/checkIfValueInText.ipynb
+++ b/DocManipulationFIles/checkIfValueInText.ipynb
@@ -15,8 +15,14 @@
     "#### # if there is change the user can choose between a few options\n",
     "#### ## the user can delete this variables and continue\n",
     "#### ## continue with the variables withour using them\n",
-    "#### ## the locations of this variables will be recorded but this locations will be removed at the output\n",
+    "#### ### the locations of this variables will be recorded but this locations will be removed at the output\n",
     "#### ## or this input locations of the variables beofre user input will be also included in the output locations\n",
+    "\n",
+    "#for short (options)\n",
+    "\n",
+    "## delete variable\n",
+    "## keep variable and use its location\n",
+    "## keep variable and NOT use its location\n",
     "\n",
     "\n",
     "\n",
@@ -124,7 +130,66 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from docx import Document\n",
+    "\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "import pprint\n",
+    "\n",
+    "\n",
+    "\n",
+    "def getWrParagraphList(Location, DocumentName):\n",
+    "\n",
+    "    LocOriginalDocument = Location + DocumentName\n",
+    "\n",
+    "    document = Document(LocOriginalDocument)\n",
+    "\n",
+    "    item = document.element.xml\n",
+    "\n",
+    "    soup = BeautifulSoup(item)\n",
+    "\n",
+    "    responseFind2 = soup.find('w:body').findChildren('w:p', recursive=False)\n",
+    "\n",
+    "\n",
+    "    WrParagraphList= []\n",
+    "    for i in responseFind2:\n",
+    "\n",
+    "        Wr = i.find_all('w:r')    \n",
+    "        if Wr == []:\n",
+    "            pass\n",
+    "\n",
+    "        else:   \n",
+    "            WrParagraphList.append(Wr)\n",
+    "\n",
+    "\n",
+    "    return WrParagraphList\n",
+    "\n",
+    "\n",
+    "def checkIfValueInText(WrParagraphList):\n",
+    "    \n",
+    "    wtValueListText = ''\n",
+    "    wtValueList = []\n",
+    "    for Paragraph in WrParagraphList:\n",
+    "\n",
+    "        for item in Paragraph:\n",
+    "\n",
+    "            wtValue = item.find('w:t')\n",
+    "\n",
+    "            if wtValue == None:\n",
+    "                wtValue = ''\n",
+    "            else:\n",
+    "                pass\n",
+    "\n",
+    "            wtValueListText = wtValueListText + wtValue.text\n",
+    "    \n",
+    "    ValueInText = False\n",
+    "    if 'Ÿ' in wtValueListText:\n",
+    "        ValueInText = True\n",
+    "\n",
+    "    \n",
+    "    return ValueInText"
+   ]
   }
  ],
  "metadata": {
